perf. adjustments : spinner is buggy on my tablet + animation and background video is too much to handle

--- a/front/src/app/app.common.scss
+++ b/front/src/app/app.common.scss
@@ -1,5 +1,5 @@
 .booth-button{
-	background-image: -webkit-linear-gradient(93deg, #bbbbbb, #fff);
+	background-image: linear-gradient(-3deg, #bbbbbb, #fff);
     color: #585858;
     font-size: 35px;
     font-family: inherit;
