--- a/front/src/app/photo-display/photo-display.component.scss
+++ b/front/src/app/photo-display/photo-display.component.scss
@@ -6,7 +6,7 @@
 	display: block;
 	height: 100%;
 	width: 100%;
-	background: rgba(0, 0, 0, 0.6);
+	//background: rgba(0, 0, 0, 0.6);
 	#cameraImage {
 		/*background-size: contain;
 		background-repeat: no-repeat;
